--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "appletondrawingclub",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "npx tailwindcss -i ./src/main.css -o ./public/main.css --watch",
-    "build": "npx tailwindcss -i ./src/main.css -o ./public/main.css"
+    "build": "npx tailwindcss -i ./src/main.css -o ./public/main.css && node build.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "commonmark": "^0.31.2",
     "tailwindcss": "^3.4.3"
   }
 }
