--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "commonmark": "^0.31.2",
+    "js-yaml": "^4.1.0",
     "tailwindcss": "^3.4.3"
   }
 }
