--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "commonmark": "^0.31.2",
     "js-yaml": "^4.1.0",
     "tailwindcss": "^3.4.3"
+  },
+  "dependencies": {
+    "@netlify/functions": "^3.1.10",
+    "@types/node": "^22.18.0",
+    "typescript": "^4.9.5"
   }
 }
