--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
 node_modules/
-public/
-.DS_Store
-todo.md
-# Local Netlify folder
+
+# Output
+.output
+.vercel
 .netlify
+.wrangler
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
