refactor: convert to typescript

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "npm run generate:posts && vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
-		"generate:posts": "node scripts/generate-posts.js"
+		"generate:posts": "node scripts/generate-posts.js",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
@@ -16,7 +17,10 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.1.12",
+		"@tsconfig/svelte": "^5.0.5",
 		"svelte": "^5.0.0",
+		"svelte-check": "^4.3.1",
+		"typescript": "^5.9.2",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
