--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.1.12",
 		"@tsconfig/svelte": "^5.0.5",
+		"supabase": "^2.39.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.3.1",
 		"typescript": "^5.9.2",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.57.2",
 		"js-yaml": "^4.1.0",
 		"marked": "^16.2.1",
 		"tailwindcss": "^4.1.12"
