feat: set up stripe checkout page

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@stripe/stripe-js": "^7.9.0",
 		"@supabase/supabase-js": "^2.57.2",
 		"js-yaml": "^4.1.0",
 		"marked": "^16.2.1",
+		"stripe": "^18.5.0",
 		"tailwindcss": "^4.1.12"
 	}
 }
