feat: sync registrations to newsletter on opt in

--- a/supabase/functions/.env.example
+++ b/supabase/functions/.env.example
@@ -10,6 +10,9 @@ STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
 RESEND_API_KEY=re_your_resend_api_key_here
 TRANSACTIONAL_FROM_EMAIL=hello@appletondrawingclub.com
 
+# Newsletter Service (Buttondown)
+BUTTONDOWN_API_KEY=your_buttondown_api_key_here
+
 # Supabase Database Access (Server-side only)
 # This should match SUPABASE_PRIVATE_KEY from your frontend .env.local
 SB_SECRET_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
