feat: initial event sync script

--- a/package.json
+++ b/package.json
@@ -18,18 +18,23 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.1.12",
 		"@tsconfig/svelte": "^5.0.5",
+		"dotenv": "^17.2.2",
 		"supabase": "^2.39.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.3.1",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.9.2",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@dotenvx/dotenvx": "^1.49.0",
 		"@stripe/stripe-js": "^7.9.0",
 		"@supabase/supabase-js": "^2.57.2",
+		"gray-matter": "^4.0.3",
 		"js-yaml": "^4.1.0",
 		"marked": "^16.2.1",
 		"stripe": "^18.5.0",
-		"tailwindcss": "^4.1.12"
+		"tailwindcss": "^4.1.12",
+		"zod": "^4.1.8"
 	}
 }
