--- a/netlify.toml
+++ b/netlify.toml
@@ -5,12 +5,7 @@
 [build.environment]
   NODE_VERSION = "22.19.0"
 
-# SPA fallback for client-side routing
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  force = false
+# SPA fallback moved to _redirects file for Netlify adapter compatibility
 
 # Cache static assets
 [[headers]]
